firebase data working
